# jsgaen

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindSDL2_mixer.cmake
include/: JSAnimatedGameObject.hpp  JSEcs.hpp  JSGame.hpp  JSGameObject.hpp  JSScreen.hpp  JSScreenManager.hpp  JSSimpleGameObject.hpp  JSTextureManager.hpp
src/: JSAnimatedGameObject.cpp  JSEcs.cpp  JSGame.cpp  JSGameObject.cpp  JSScreen.cpp  JSScreenManager.cpp  JSSimpleGameObject.cpp  JSTextureManager.cpp
